Deleted the "stats" from the menu, only accesible by new appointment

--- a/Pet Care Assistant/AppShell.xaml
+++ b/Pet Care Assistant/AppShell.xaml
@@ -35,10 +35,10 @@
    ContentTemplate="{DataTemplate local:AppointmentFormPage}"
    Route="AppointmentFormPage" />
 
-    <ShellContent
+    <!--<ShellContent
     Title="Appointment Stats"
     ContentTemplate="{DataTemplate local:AppointmentStatsPage}"
-    Route="AppointmentStatsPage" />
+    Route="AppointmentStatsPage" />-->
 
     <ShellContent
           Title="Health Checker"
